# nextgen-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nextgen_system/: ARCHITECTURE_BLUEPRINT.md  DATA_CONTRACTS.md  INFRASTRUCTURE_PLAN.md
src/nextgen_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nextgen_system/config/: __init__.py  defaults.json  defaults.yaml  settings.py
src/nextgen_system/dashboard/: README.md  __init__.py  api.py  repository.py  schemas.py
src/nextgen_system/dashboard/static/: app.js  index.html  styles.css
src/nextgen_system/migrations/: 0001_initial.sql  0002_task_runs.sql  0003_core_tables.sql  0004_config_overrides.sql
src/nextgen_system/orchestration/: __init__.py  cli.py  registry.py  tasks.py
src/nextgen_system/persistence/: __init__.py  database.py  migrator.py
src/nextgen_system/services/: __init__.py
src/nextgen_system/services/features/: FEATURE_MODEL_ARCHITECTURE.md  __init__.py  builder.py  repositories.py
src/nextgen_system/services/feedback/: VALIDATION_FEEDBACK_ARCHITECTURE.md  __init__.py  config_overrides.py  feedback.py  validation.py
src/nextgen_system/services/ingestion/: INGESTION_ARCHITECTURE.md  __init__.py  market.py  news.py  repositories.py  universe.py  universe_builder.py
src/nextgen_system/services/ingestion/providers/: __init__.py  (+2 more)
src/nextgen_system/services/prediction/: __init__.py  repositories.py  service.py
src/nextgen_system/services/trading/: prioritizer.py  repositories.py  service.py
tests/: test_nextgen_pipeline.py
(+1 files in other folders)
